src/app/home/home.page.scss
.product-card-list{
	margin-bottom: 100px;
}

.product-card {
	border-radius: 5px;
	box-shadow: 0 10px 30px -5px rgba(#000000, 0.2);
	display: flex;
	padding: 15px;
	margin: 15px 0;
	align-items: center;
	transition: transform 100ms ease;
	// border: 1px solid black;

	&:active {
		transform: scale(0.9);
	}

	img {
		display: block;
		width: 60px;
		height: 60px;
		object-fit: cover;
		border-radius: 5px;
	}
}

.fwf-button{
	z-index: 999 !important;
}

.product-card-body {
	margin-left: 15px;
	overflow: hidden;

	.product-card-title {
		margin: 0;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
		word-break: break-all;
		color: var(--dark);
		font-size: 1.1em;
	}

	.product-card-id {
		color: var(--medium);
		font-size: 0.9em;
		opacity: 0.7;
	}
}

ion-virtual-scroll {
	contain: none !important;
}

ion-virtual-scroll>.virtual-item{
	background-color: transparent;
}

